# langify-server-backup

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .python-version  APIs.ipynb  Commands.ipynb  Compare queries.ipynb  HTML diff.ipynb  Pipfile  README.md  Sentences.ipynb  Statistics.ipynb  Try to do a complex query (sum, filter, count) for chapter stats.ipynb  additional_packages.txt  backup.sh  celery.example.config  config.example.ini  create_db_images.sh  default.env  docker-compose.dev.yml  docker-compose.migrate.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  egwwritings API.ipynb  frontend_urls.py  image_versions.yml  maintenance.sh  manage.py  mr_checklist.txt  pyproject.toml  requirements.txt  update_images.py  uwsgi.example.ini
base/: constants.py  exceptions.py  history.py  models.py  serializers.py  tests.py
docker/: Dockerfile  Dockerfile-db-pseudo  Dockerfile-db-test  bashrc  docker-compose.build.yml  restore_dbs.sh
docs/: admin.md  permissions.md
langify/: __init__.py  celery.py  routers.py  settings.py  settings_test.py  urls.py  wsgi.py
misc/: __init__.py  admin.py  api.py  apis.py  apps.py  authentication.py  console.py  factories.py  models.py  signals.py  tasks.py  tests.py  tests_api.py  tests_commands.py  urls.py  utils.py  views.py
misc/migrations/: 0001_initial.py  0002_historicalpage_page.py  0003_auto_20180709_0817.py  0004_attachment.py  0005_auto_20190212_1806.py  0006_auto_20190401_1114.py
notebooks/: Differences bible verse counting German.ipynb  Privacy Policy.ipynb
panta/: __init__.py  admin.py  apps.py  constants.py  factories.py  models.py  queries.py  signals.py  tasks.py  utils.py  validators.py
panta/api/: external.py  filters.py  pagination.py  permissions.py  serializers.py  views.py
path/: __init__.py  adapter.py  admin.py  apps.py  factories.py  models.py  signals.py  test_logging.py  tests.py  tests_admin.py  tests_auth.py  tests_selenium.py  thumbnails.py  urls.py  validators.py
style_guide/: __init__.py  admin.py  apps.py  factories.py  models.py  utils.py
white_estate/: __init__.py  admin.py  apis.py  apps.py  constants.py  conversion.py  models.py  provider.py  tasks.py  tests.py  tests_utils.py  urls.py  utils.py  views.py
(+164 files in other folders)
